Added basic CRUD operations for budgets & transactions

--- a/tinyERP/tinyERP.BusinessLayer/tinyERP.BusinessLayer.csproj
+++ b/tinyERP/tinyERP.BusinessLayer/tinyERP.BusinessLayer.csproj
@@ -49,12 +49,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="LocalOptimisticConcurrencyException.cs" />
+    <Compile Include="TinyErpBusinessComponent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\tinyERP.Dal\tinyERP.Dal.csproj">
+      <Project>{F25E441D-D68F-4AE0-ABF2-EAC482022378}</Project>
+      <Name>tinyERP.Dal</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
