--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,8 +2,8 @@ version: 1.0.{build}
 nuget:
   project_feed: true
 before_build:
-  - cmd: nuget restore
+  - cmd: nuget restore tinyERP
 build:
-  project: tinyERP.sln
+  project: tinyERP\tinyERP.sln
   verbosity: minimal
   
