--- a/tinyERP/tinyERP.Dal/tinyERP.Dal.csproj
+++ b/tinyERP/tinyERP.Dal/tinyERP.Dal.csproj
@@ -51,9 +51,17 @@
   <ItemGroup>
     <Compile Include="Entities\Budget.cs" />
     <Compile Include="Entities\Transaction.cs" />
+    <Compile Include="IUnitOfWork.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\BudgetRepository.cs" />
+    <Compile Include="Repositories\ITransactionRepository.cs" />
+    <Compile Include="Repositories\IBudgetRepository.cs" />
+    <Compile Include="Repositories\IRepository.cs" />
+    <Compile Include="Repositories\Repository.cs" />
+    <Compile Include="Repositories\TransactionRepository.cs" />
     <Compile Include="TinyErpContext.cs" />
+    <Compile Include="UnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\App.config">
