--- a/tinyERP/tinyERPUnitTest/tinyERPUnitTest.csproj
+++ b/tinyERP/tinyERPUnitTest/tinyERPUnitTest.csproj
@@ -83,6 +83,10 @@
       <Project>{3dddc9c1-5512-4e44-94c7-72ba384aefca}</Project>
       <Name>tinyERP.Service.WCF</Name>
     </ProjectReference>
+    <ProjectReference Include="..\tinyERP.TestEnvrionment\tinyERP.TestEnvrionment.csproj">
+      <Project>{2D0B1739-5A39-4A37-8581-3640DB5A68AA}</Project>
+      <Name>tinyERP.TestEnvrionment</Name>
+    </ProjectReference>
     <ProjectReference Include="..\tinyERP\tinyERP.UI.csproj">
       <Project>{c3305b6b-c7d6-464b-94c4-eb46d7926ee0}</Project>
       <Name>tinyERP.UI</Name>
