--- a/tinyERP/App.config
+++ b/tinyERP/App.config
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="entityFramework"
+             type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+             requirePermission="false" />
   </configSections>
 
   <connectionStrings>
-    <add name="TinyErpContext" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=tinyERP;Integrated Security=True;MultipleActiveResultSets=True;App=tinyERP" providerName="System.Data.SqlClient"/>
+    <add name="TinyErpContext"
+         connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=tinyERP;Integrated Security=True;MultipleActiveResultSets=True;App=tinyERP"
+         providerName="System.Data.SqlClient" />
   </connectionStrings>
-  
+
 
 </configuration>
