--- a/tinyERP/tinyERP/packages.config
+++ b/tinyERP/tinyERP/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="LiveCharts" version="0.9.5" targetFramework="net452" />
+  <package id="LiveCharts.Wpf" version="0.9.5" targetFramework="net452" />
   <package id="MahApps.Metro" version="1.4.3" targetFramework="net452" />
   <package id="MahApps.Metro.IconPacks" version="1.7.1" targetFramework="net452" />
   <package id="MvvmValidation" version="3.0.0" targetFramework="net452" />
