--- a/tinyERP/tinyERP.Dal/tinyERP.Dal.csproj
+++ b/tinyERP/tinyERP.Dal/tinyERP.Dal.csproj
@@ -49,12 +49,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\Order.cs" />
     <Compile Include="Entities\Budget.cs" />
     <Compile Include="Entities\Category.cs" />
     <Compile Include="Entities\Transaction.cs" />
     <Compile Include="IUnitOfWork.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\IOrderRepository.cs" />
+    <Compile Include="Repositories\OrderRepository.cs" />
     <Compile Include="Repositories\BudgetRepository.cs" />
     <Compile Include="Repositories\CategoryRepository.cs" />
     <Compile Include="Repositories\ICategoryRepository.cs" />
@@ -64,6 +67,7 @@
     <Compile Include="Repositories\Repository.cs" />
     <Compile Include="Repositories\TransactionRepository.cs" />
     <Compile Include="TinyErpContext.cs" />
+    <Compile Include="Types\State.cs" />
     <Compile Include="UnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
