--- a/tinyERP/tinyERP.BusinessLayer/tinyERP.BusinessLayer.csproj
+++ b/tinyERP/tinyERP.BusinessLayer/tinyERP.BusinessLayer.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileAccess.cs" />
     <Compile Include="TinyErpBusinessComponent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
