--- a/tinyERP/tinyERP.Dal/tinyERP.Dal.csproj
+++ b/tinyERP/tinyERP.Dal/tinyERP.Dal.csproj
@@ -58,7 +58,7 @@
     <Compile Include="Entities\Transaction.cs" />
     <Compile Include="FileAccess.cs" />
     <Compile Include="IUnitOfWork.cs" />
-    <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Migrations\TinyErpDBInitializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\IOrderRepository.cs" />
     <Compile Include="Repositories\OrderRepository.cs" />
