--- a/tinyERP/tinyERP/tinyERP.UI.csproj
+++ b/tinyERP/tinyERP/tinyERP.UI.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Resources\LevelToMarginConverter.cs" />
     <Compile Include="Resources\EnumToDescriptionConverter.cs" />
     <Compile Include="Resources\BooleanToRevenueConverter.cs" />
+    <Compile Include="Resources\TemplateType.cs" />
     <Compile Include="ViewModels\CustomerViewModel.cs" />
     <Compile Include="ViewModels\DocumentViewModel.cs" />
     <Compile Include="ViewModels\EditCustomerViewModel.cs" />
