Added user settings for templates and validation

--- a/tinyERP/tinyERP/App.config
+++ b/tinyERP/tinyERP/App.config
@@ -6,6 +6,9 @@
     <section name="entityFramework"
              type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
              requirePermission="false" />
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="tinyERP.UI.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
@@ -21,4 +24,17 @@
                 type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <userSettings>
+    <tinyERP.UI.Properties.Settings>
+      <setting name="ConfirmationTemplatePath" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="InvoiceTemplatePath" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="OfferTemplatePath" serializeAs="String">
+        <value />
+      </setting>
+    </tinyERP.UI.Properties.Settings>
+  </userSettings>
 </configuration>
