--- a/tinyERP/tinyERP/tinyERP.UI.csproj
+++ b/tinyERP/tinyERP/tinyERP.UI.csproj
@@ -296,6 +296,9 @@
   <ItemGroup>
     <Resource Include="Resources\tinyERP_Logo.png" />
   </ItemGroup>
+  <ItemGroup>
+    <SplashScreen Include="Resources\tinyERP_LogoSplash.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
