Added default Template-Path-Settings

--- a/tinyERP/tinyERP/App.config
+++ b/tinyERP/tinyERP/App.config
@@ -26,14 +26,14 @@
   </entityFramework>
   <userSettings>
     <tinyERP.UI.Properties.Settings>
+      <setting name="OfferTemplatePath" serializeAs="String">
+        <value>Offerte.docx</value>
+      </setting>
       <setting name="ConfirmationTemplatePath" serializeAs="String">
-        <value />
+        <value>Auftragsbestätigung.docx</value>
       </setting>
       <setting name="InvoiceTemplatePath" serializeAs="String">
-        <value />
-      </setting>
-      <setting name="OfferTemplatePath" serializeAs="String">
-        <value />
+        <value>Rechnung.docx</value>
       </setting>
     </tinyERP.UI.Properties.Settings>
   </userSettings>
